fix arabic text display on mobile

--- a/src/LandingPage.scss
+++ b/src/LandingPage.scss
@@ -9,7 +9,7 @@ html {
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-image: url('/tedzvid/assets/svg/bgpattern.png');
+    background-image: url('/assets/svg/bgpattern.png');
 }
 
 #root {
